@@ -78,9 +78,9 @@ if($reportdef['report']['profile_name']!='' and isset($subcomments_fix)){
 		$profile_name=$reportdef['report']['profile_name'];
 		/* This fromdate is just a hack needs to check for previous report maybe?*/
 		//$reportyear=$reportdef['report']['year']-1;
-		//$fromdate=$reportyear.'-08-15';//Does the whole academic year
+		$fromdate=$reportyear.'-08-15';//Does the whole academic year
 		$reportyear=$reportdef['report']['year'];
-		$fromdate=$reportyear.'-02-1';
+		//$fromdate=$reportyear.'-02-14';
 		$Statements=(array)fetchProfileStatements($profile_name,$bid,$pid,$sid,$fromdate);
 		$StatementBank['Area'][$pid]['Statements']=$Statements;
 		$StatementBank['Area'][$pid]['Name']='FS Profile: '.$pid;
@@ -114,9 +114,9 @@ else{
 <meta name="licence" content="GNU General Public License version 2" />
 <link rel="stylesheet" type="text/css" href="../../css/bookstyle.css" />
 <link rel="stylesheet" type="text/css" href="../../css/commentwriter.css" />
-<script src="../../js/bookfunctions.js?version=928" type="text/javascript"></script>
+<script src="../../js/bookfunctions.js?version=931" type="text/javascript"></script>
 <script src="../../js/qtip.js" type="text/javascript"></script>
-<script src="../../js/statementbank.js" type="text/javascript"></script>
+<script src="../../js/statementbank.js?version=931" type="text/javascript"></script>
 </head>
 <body onload="loadRequired();">
 
@@ -163,6 +163,7 @@ else{
 		</form>
 	</div>
 <?php
+			trigger_error($commentheight,E_USER_WARNING);
 			if($commentheight<300){
 ?>
 	<div class="content" id="statementbank">
